OpenJMLTest/testfiles/escDemo/expected
..\..\OpenJMLDemo\src\openjml\clock\TickTockClock.java:31: error: An identifier with protected visibility may not be used in a assignable clause with public visibility
      @  assignable hour, minute, second; // NB for expository purposes only
                    ^
..\..\OpenJMLDemo\src\openjml\clock\TickTockClock.java:31: error: An identifier with protected visibility may not be used in a assignable clause with public visibility
      @  assignable hour, minute, second; // NB for expository purposes only
                          ^
..\..\OpenJMLDemo\src\openjml\clock\TickTockClock.java:31: error: An identifier with protected visibility may not be used in a assignable clause with public visibility
      @  assignable hour, minute, second; // NB for expository purposes only
                                  ^
3 errors
